# OpenGL

./: Application.cpp  CMakeLists.txt  EntryPoint.cpp  Start.cpp  glad.c
Assets/shader/: Basic.shader  debug_quad_depth.shader  shadow_mapping.shader  shadow_mapping_depth.shader
Dependencies/include/assimp/: config.h  types.h
Dependencies/include/glad/: glad.h
Dependencies/lib/: assimp-vc143-mt.lib  assimp.lib
src/: glad.c
src/Core/: Application.cpp  Application.h  Base.h  Camera.cpp  Camera.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/ImplementAPI/: OpenGLCamera.cpp  OpenGLCamera.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLRenderCMD.cpp  OpenGLRenderCMD.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLWindow.cpp  OpenGLWindow.h
src/RenderImplement/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
src/cpp/: Camera.cpp  Camera.h  Model.cpp  OpenGlManager.cpp  OpenGlManager.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h
src/utility/: loadOBJ.cpp  loadOBJ.h
